--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3",
+        "luigel/laravel-paymongo": "^1.3",
         "paypal/paypal-checkout-sdk": "1.0.1",
         "santigarcor/laratrust": "^6.3"
     },
