--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^3.3",
         "luigel/laravel-paymongo": "^1.3",
         "paypal/paypal-checkout-sdk": "1.0.1",
+        "pusher/pusher-php-server": "^7.0",
         "santigarcor/laratrust": "^6.3"
     },
     "require-dev": {
