--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "luigel/laravel-paymongo": "^1.3",
+        "mikehaertl/phpwkhtmltopdf": "^2.5",
         "paypal/paypal-checkout-sdk": "1.0.1",
         "pusher/pusher-php-server": "^7.0",
         "santigarcor/laratrust": "^6.3"
